@@ -77,7 +77,7 @@ class UserProfileImporterTests(unittest.TestCase):
         self.assertEqual(profile.organization, 'Open Society Institute')
         self.assertEqual(profile.location, 'Port-au-Prince')
         self.assertEqual(profile.country, 'HT')
-        self.assertEqual(profile.website, 'http://karl.example.com/profile')
+        self.assertEqual(profile.websites, ['http://karl.example.com/profile',])
         self.assertEqual(profile.languages, 'Italian, English, Esperanto')
         self.assertEqual(profile.office, 'Fondation Connaissance et Liberte')
         self.assertEqual(profile.room_no, '1234')
@@ -127,7 +127,7 @@ class UserProfileImporterTests(unittest.TestCase):
         self.assertEqual(profile.organization, 'Open Society Institute')
         self.assertEqual(profile.location, 'Port-au-Prince')
         self.assertEqual(profile.country, 'HT')
-        self.assertEqual(profile.website, 'http://karl.example.com/profile')
+        self.assertEqual(profile.websites, ['http://karl.example.com/profile',])
         self.assertEqual(profile.languages, 'Italian, English, Esperanto')
         self.assertEqual(profile.office, 'Fondation Connaissance et Liberte')
         self.assertEqual(profile.room_no, '1234')
